[package]
name = "cargo-prefetch"
version = "0.1.0"
authors = ["Eric Huss"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cargo"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"
description = "Cargo subcommand to download popular crates."
homepage = "https://github.com/ehuss/cargo-prefetch"
repository = "https://github.com/ehuss/cargo-prefetch"

[dependencies]
clap = { version = "2.33", features = ["wrap_help"] }
anyhow = "1.0.66"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_derive = "1.0"
tempfile = "3.0"
toml = "0.5"
regex="1.7.0"

[dev-dependencies]
reg-index = "0.5.0"
